--- a/web/sites/mobile-games/config/sync/views.view.games_category.yml
+++ b/web/sites/mobile-games/config/sync/views.view.games_category.yml
@@ -7,6 +7,8 @@ dependencies:
     - field.storage.taxonomy_term.field_games_alias
     - field.storage.taxonomy_term.field_games_category_logo
     - field.storage.taxonomy_term.field_isordinarycategory
+    - field.storage.taxonomy_term.field_post_login_banner_widget
+    - field.storage.taxonomy_term.field_pre_login_banner_widget
     - field.storage.taxonomy_term.field_publish_date
     - field.storage.taxonomy_term.field_unpublish_date
     - system.menu.admin
@@ -657,9 +659,36 @@ display:
         type: data_field
         options:
           field_options:
+            field_games_alias:
+              alias: ''
+              raw_output: false
             name:
               alias: ''
               raw_output: false
+            tid:
+              alias: ''
+              raw_output: false
+            tid_1:
+              alias: ''
+              raw_output: false
+            field_isordinarycategory:
+              alias: ''
+              raw_output: false
+            field_publish_date:
+              alias: ''
+              raw_output: false
+            field_unpublish_date:
+              alias: ''
+              raw_output: false
+            field_games_category_logo:
+              alias: ''
+              raw_output: false
+            field_post_login_banner_widget:
+              alias: ''
+              raw_output: true
+            field_pre_login_banner_widget:
+              alias: ''
+              raw_output: true
       fields:
         field_games_alias:
           id: field_games_alias
@@ -1181,6 +1210,132 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
+        field_post_login_banner_widget:
+          id: field_post_login_banner_widget
+          table: taxonomy_term__field_post_login_banner_widget
+          field: field_post_login_banner_widget
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: false
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: false
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
+        field_pre_login_banner_widget:
+          id: field_pre_login_banner_widget
+          table: taxonomy_term__field_pre_login_banner_widget
+          field: field_pre_login_banner_widget
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: false
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: false
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
       defaults:
         fields: false
         sorts: false
@@ -1221,5 +1376,7 @@ display:
         - 'config:field.storage.taxonomy_term.field_games_alias'
         - 'config:field.storage.taxonomy_term.field_games_category_logo'
         - 'config:field.storage.taxonomy_term.field_isordinarycategory'
+        - 'config:field.storage.taxonomy_term.field_post_login_banner_widget'
+        - 'config:field.storage.taxonomy_term.field_pre_login_banner_widget'
         - 'config:field.storage.taxonomy_term.field_publish_date'
         - 'config:field.storage.taxonomy_term.field_unpublish_date'
