--- a/web/sites/mobile-games/config/sync/core.entity_view_display.taxonomy_term.games_category.default.yml
+++ b/web/sites/mobile-games/config/sync/core.entity_view_display.taxonomy_term.games_category.default.yml
@@ -7,6 +7,8 @@ dependencies:
     - field.field.taxonomy_term.games_category.field_games_category_logo
     - field.field.taxonomy_term.games_category.field_games_disable
     - field.field.taxonomy_term.games_category.field_isordinarycategory
+    - field.field.taxonomy_term.games_category.field_post_login_banner_widget
+    - field.field.taxonomy_term.games_category.field_pre_login_banner_widget
     - field.field.taxonomy_term.games_category.field_publish_date
     - field.field.taxonomy_term.games_category.field_unpublish_date
     - taxonomy.vocabulary.games_category
@@ -62,6 +64,22 @@ content:
       format_custom_true: ''
     third_party_settings: {  }
     type: boolean
+    region: content
+  field_post_login_banner_widget:
+    weight: 8
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_pre_login_banner_widget:
+    weight: 7
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
   field_publish_date:
     weight: 4
