--- a/web/sites/games/config/sync/core.entity_form_display.taxonomy_term.game_category_2_0.default.yml
+++ b/web/sites/games/config/sync/core.entity_form_display.taxonomy_term.game_category_2_0.default.yml
@@ -3,7 +3,11 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.taxonomy_term.game_category_2_0.field_banner_link_post_login
+    - field.field.taxonomy_term.game_category_2_0.field_banner_link_pre_login
     - field.field.taxonomy_term.game_category_2_0.field_hide_name
+    - field.field.taxonomy_term.game_category_2_0.field_link_target_post_login
+    - field.field.taxonomy_term.game_category_2_0.field_link_target_pre_login
     - field.field.taxonomy_term.game_category_2_0.field_post_login_banner_widget
     - field.field.taxonomy_term.game_category_2_0.field_pre_login_banner_widget
     - field.field.taxonomy_term.game_category_2_0.field_v2_game_category_alias
@@ -51,7 +55,11 @@ third_party_settings:
     group_banner_widget:
       children:
         - field_pre_login_banner_widget
+        - field_banner_link_pre_login
+        - field_link_target_pre_login
         - field_post_login_banner_widget
+        - field_banner_link_post_login
+        - field_link_target_post_login
       parent_name: ''
       weight: 8
       format_type: details
@@ -66,6 +74,22 @@ targetEntityType: taxonomy_term
 bundle: game_category_2_0
 mode: default
 content:
+  field_banner_link_post_login:
+    weight: 14
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
+  field_banner_link_pre_login:
+    weight: 11
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_hide_name:
     weight: 1
     settings:
@@ -73,8 +97,20 @@ content:
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
+  field_link_target_post_login:
+    weight: 15
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
+  field_link_target_pre_login:
+    weight: 12
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
   field_post_login_banner_widget:
-    weight: 11
+    weight: 13
     settings:
       size: 120
       placeholder: ''
