--- a/web/sites/games/config/sync/core.entity_view_display.taxonomy_term.game_category_2_0.default.yml
+++ b/web/sites/games/config/sync/core.entity_view_display.taxonomy_term.game_category_2_0.default.yml
@@ -3,7 +3,13 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.taxonomy_term.game_category_2_0.field_banner_link_post_login
+    - field.field.taxonomy_term.game_category_2_0.field_banner_link_pre_login
     - field.field.taxonomy_term.game_category_2_0.field_hide_name
+    - field.field.taxonomy_term.game_category_2_0.field_link_target_post_login
+    - field.field.taxonomy_term.game_category_2_0.field_link_target_pre_login
+    - field.field.taxonomy_term.game_category_2_0.field_post_login_banner_widget
+    - field.field.taxonomy_term.game_category_2_0.field_pre_login_banner_widget
     - field.field.taxonomy_term.game_category_2_0.field_v2_game_category_alias
     - field.field.taxonomy_term.game_category_2_0.field_v2_game_category_disable
     - field.field.taxonomy_term.game_category_2_0.field_v2_game_category_hicon
@@ -14,6 +20,7 @@ dependencies:
     - taxonomy.vocabulary.game_category_2_0
   module:
     - image
+    - options
     - text
 id: taxonomy_term.game_category_2_0.default
 targetEntityType: taxonomy_term
@@ -27,6 +34,22 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_banner_link_post_login:
+    weight: 19
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_banner_link_pre_login:
+    weight: 18
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
   field_hide_name:
     weight: 13
     label: above
@@ -36,6 +59,36 @@ content:
       format_custom_true: ''
     third_party_settings: {  }
     type: boolean
+    region: content
+  field_link_target_post_login:
+    weight: 21
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
+    region: content
+  field_link_target_pre_login:
+    weight: 20
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
+    region: content
+  field_post_login_banner_widget:
+    weight: 14
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_pre_login_banner_widget:
+    weight: 15
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
   field_v2_game_category_alias:
     weight: 7
