--- a/web/sites/mobile-casino-gold/config/sync/views.view.games_list.yml
+++ b/web/sites/mobile-casino-gold/config/sync/views.view.games_list.yml
@@ -782,9 +782,26 @@ display:
       display_extenders: {  }
       path: api/games_list
       pager:
-        type: none
+        type: full
         options:
+          items_per_page: 150
           offset: 0
+          id: 0
+          total_pages: null
+          tags:
+            previous: '‹ Previous'
+            next: 'Next ›'
+            first: '« First'
+            last: 'Last »'
+          expose:
+            items_per_page: false
+            items_per_page_label: 'Items per page'
+            items_per_page_options: '5, 10, 25, 50'
+            items_per_page_options_all: false
+            items_per_page_options_all_label: '- All -'
+            offset: false
+            offset_label: Offset
+          quantity: 9
       style:
         type: node_list_serializer
         options:
@@ -857,5 +874,6 @@ display:
         - 'languages:language_content'
         - 'languages:language_interface'
         - request_format
+        - url.query_args
         - 'user.node_grants:view'
       tags: {  }
