--- a/web/sites/mobile-games/config/sync/config_ignore.settings.yml
+++ b/web/sites/mobile-games/config/sync/config_ignore.settings.yml
@@ -1,12 +1,13 @@
 ignored_config_entities:
   0: 'webform.webform.*'
   2: 'webcomposer_config.*'
-  4: 'system.menu.*'
-  6: 'block.*'
-  8: 'filter.*'
-  10: 'language.*'
-  12: 'devel.*'
-  14: games_search.search_configuration
-  16: gts.gts_configuration
+  4: 'webcomposer_graphyte.*'
+  6: 'system.menu.*'
+  8: 'block.*'
+  10: 'filter.*'
+  12: 'language.*'
+  14: 'devel.*'
+  16: games_search.search_configuration
+  18: gts.gts_configuration
 _core:
   default_config_hash: UVH1aJ4b44UM-VdPVN7hNNuuVqfReJxwfVeDQH1Hvsk
