change img field name and upload location

--- a/web/sites/dafa-sports/modules/custom/dafasports_call_us/config/install/dafasports_call_us.call_us_configuration.yml
+++ b/web/sites/dafa-sports/modules/custom/dafasports_call_us/config/install/dafasports_call_us.call_us_configuration.yml
@@ -2,5 +2,5 @@
 enabled: false
 base_url: '/linkto:avaya'
 button_text: 'CALL US'
-init_icon: ''
-extended_icon: ''
+init_icon: null
+expanded_icon: null
