--- a/web/sites/dafa-sports/modules/custom/dafasports_call_us/config/install/dafasports_call_us.call_us_configuration.yml
+++ b/web/sites/dafa-sports/modules/custom/dafasports_call_us/config/install/dafasports_call_us.call_us_configuration.yml
@@ -1,6 +1,8 @@
 #dafasports call us config
 enabled: false
-base_url: '/linkto:avaya'
-button_text: 'CALL US'
-init_icon: null
-expanded_icon: null
+link_url: '/linkto:avaya'
+link_param: null
+link_class: null
+link_text: 'CALL US'
+file_image_init_icon: null
+file_image_expanded_icon: null
