--- a/web/sites/mobile-games/config/sync/core.entity_form_display.taxonomy_term.games_category.default.yml
+++ b/web/sites/mobile-games/config/sync/core.entity_form_display.taxonomy_term.games_category.default.yml
@@ -8,7 +8,11 @@ dependencies:
     - field.field.taxonomy_term.games_category.field_games_disable
     - field.field.taxonomy_term.games_category.field_isordinarycategory
     - field.field.taxonomy_term.games_category.field_post_login_banner_widget
+    - field.field.taxonomy_term.games_category.field_post_login_link
+    - field.field.taxonomy_term.games_category.field_post_login_link_target
     - field.field.taxonomy_term.games_category.field_pre_login_banner_widget
+    - field.field.taxonomy_term.games_category.field_pre_login_link
+    - field.field.taxonomy_term.games_category.field_pre_login_link_target
     - field.field.taxonomy_term.games_category.field_publish_date
     - field.field.taxonomy_term.games_category.field_unpublish_date
     - image.style.thumbnail
@@ -34,8 +38,8 @@ third_party_settings:
       label: 'Scheduler Settings'
     group_banner_widget:
       children:
-        - field_pre_login_banner_widget
-        - field_post_login_banner_widget
+        - group_pre_login_banner_widget
+        - group_post_login_banner_widget
       parent_name: ''
       weight: 20
       format_type: details
@@ -45,6 +49,35 @@ third_party_settings:
         open: false
         required_fields: true
       label: 'Banner Widget'
+    group_pre_login_banner_widget:
+      children:
+        - field_pre_login_banner_widget
+        - field_pre_login_link
+        - field_pre_login_link_target
+      parent_name: group_banner_widget
+      weight: 20
+      format_type: details
+      format_settings:
+        label: Pre-Login
+        open: true
+        required_fields: true
+        id: ''
+        classes: ''
+      label: Pre-Login
+    group_post_login_banner_widget:
+      children:
+        - field_post_login_banner_widget
+        - field_post_login_link
+        - field_post_login_link_target
+      parent_name: group_banner_widget
+      weight: 21
+      format_type: details
+      format_settings:
+        id: ''
+        classes: ''
+        open: true
+        required_fields: true
+      label: Post-Login
 id: taxonomy_term.games_category.default
 targetEntityType: taxonomy_term
 bundle: games_category
@@ -81,20 +114,48 @@ content:
     type: boolean_checkbox
     region: content
   field_post_login_banner_widget:
-    weight: 11
+    weight: 22
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
     region: content
-  field_pre_login_banner_widget:
-    weight: 10
+  field_post_login_link:
+    weight: 23
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
+    region: content
+  field_post_login_link_target:
+    weight: 24
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
+  field_pre_login_banner_widget:
+    weight: 21
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
+  field_pre_login_link:
+    weight: 22
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
+  field_pre_login_link_target:
+    weight: 23
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
     region: content
   field_publish_date:
     weight: 7
