--- a/web/sites/mobile-games/config/sync/core.entity_view_display.taxonomy_term.games_category.default.yml
+++ b/web/sites/mobile-games/config/sync/core.entity_view_display.taxonomy_term.games_category.default.yml
@@ -8,13 +8,18 @@ dependencies:
     - field.field.taxonomy_term.games_category.field_games_disable
     - field.field.taxonomy_term.games_category.field_isordinarycategory
     - field.field.taxonomy_term.games_category.field_post_login_banner_widget
+    - field.field.taxonomy_term.games_category.field_post_login_link
+    - field.field.taxonomy_term.games_category.field_post_login_link_target
     - field.field.taxonomy_term.games_category.field_pre_login_banner_widget
+    - field.field.taxonomy_term.games_category.field_pre_login_link
+    - field.field.taxonomy_term.games_category.field_pre_login_link_target
     - field.field.taxonomy_term.games_category.field_publish_date
     - field.field.taxonomy_term.games_category.field_unpublish_date
     - taxonomy.vocabulary.games_category
   module:
     - datetime
     - image
+    - options
     - text
 id: taxonomy_term.games_category.default
 targetEntityType: taxonomy_term
@@ -73,6 +78,21 @@ content:
     third_party_settings: {  }
     type: string
     region: content
+  field_post_login_link:
+    weight: 10
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_post_login_link_target:
+    weight: 12
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
+    region: content
   field_pre_login_banner_widget:
     weight: 7
     label: above
@@ -80,6 +100,21 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+    region: content
+  field_pre_login_link:
+    weight: 9
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_pre_login_link_target:
+    weight: 11
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
     region: content
   field_publish_date:
     weight: 4
