--- a/web/sites/mobile-games/config/sync/field.field.taxonomy_term.games_category.field_pre_login_banner_widget.yml
+++ b/web/sites/mobile-games/config/sync/field.field.taxonomy_term.games_category.field_pre_login_banner_widget.yml
@@ -10,7 +10,7 @@ field_name: field_pre_login_banner_widget
 entity_type: taxonomy_term
 bundle: games_category
 label: 'Pre-Login Banner Widget'
-description: ''
+description: "<br>\r\n<strong>placeholders:</strong> <br>\r\n<small>\r\n<i>{bannerLanguage} - </i> Placeholder for banner language<br>\r\n<i>{bannerCurrency} - </i> Placeholder for banner currency<br><br>\r\n\r\n<i>example: http://domain.com?lang={bannerLanguage}&currency={bannerCurrency}</i>\r\n</small>"
 required: false
 translatable: true
 default_value: {  }
