--- a/web/sites/dafa-sports/config/sync/core.extension.yml
+++ b/web/sites/dafa-sports/config/sync/core.extension.yml
@@ -21,6 +21,7 @@ module:
   contextual: 0
   ctools: 0
   dafasports_config: 0
+  dafasports_call_us: 0
   datetime: 0
   draggableviews: 0
   dynamic_page_cache: 0
