updated registration field for coupon error messages

--- a/web/sites/zipang-casino/config/sync/zipang_config.registration_configuration.yml
+++ b/web/sites/zipang-casino/config/sync/zipang_config.registration_configuration.yml
@@ -16,7 +16,8 @@ error_state: 'state ja'
 error_city: 'city ja'
 error_zipcode: 'zip ja'
 error_address: 'address ja'
-error_couponcode: 'coupon ja'
+error_couponcode_title: 'coupon code title EN'
+error_couponcode: 'coupon code message EN'
 error_term_conditions: 'tnc ja'
 error_captcha: 'captcha ja'
 error_promotions: 'promotions ja'
