--- a/web/sites/mobile-games/config/sync/core.entity_view_display.taxonomy_term.games_category.default.yml
+++ b/web/sites/mobile-games/config/sync/core.entity_view_display.taxonomy_term.games_category.default.yml
@@ -7,9 +7,13 @@ dependencies:
     - field.field.taxonomy_term.games_category.field_games_category_logo
     - field.field.taxonomy_term.games_category.field_games_disable
     - field.field.taxonomy_term.games_category.field_isordinarycategory
+    - field.field.taxonomy_term.games_category.field_post_banner_height
+    - field.field.taxonomy_term.games_category.field_post_banner_width
     - field.field.taxonomy_term.games_category.field_post_login_banner_widget
     - field.field.taxonomy_term.games_category.field_post_login_link
     - field.field.taxonomy_term.games_category.field_post_login_link_target
+    - field.field.taxonomy_term.games_category.field_pre_banner_height
+    - field.field.taxonomy_term.games_category.field_pre_banner_width
     - field.field.taxonomy_term.games_category.field_pre_login_banner_widget
     - field.field.taxonomy_term.games_category.field_pre_login_link
     - field.field.taxonomy_term.games_category.field_pre_login_link_target
@@ -70,6 +74,22 @@ content:
     third_party_settings: {  }
     type: boolean
     region: content
+  field_post_banner_height:
+    weight: 15
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_post_banner_width:
+    weight: 16
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
   field_post_login_banner_widget:
     weight: 8
     label: above
@@ -92,6 +112,22 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: list_default
+    region: content
+  field_pre_banner_height:
+    weight: 13
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_pre_banner_width:
+    weight: 14
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
   field_pre_login_banner_widget:
     weight: 7
