--- a/web/sites/mobile-games/config/sync/views.view.games_category.yml
+++ b/web/sites/mobile-games/config/sync/views.view.games_category.yml
@@ -7,9 +7,13 @@ dependencies:
     - field.storage.taxonomy_term.field_games_alias
     - field.storage.taxonomy_term.field_games_category_logo
     - field.storage.taxonomy_term.field_isordinarycategory
+    - field.storage.taxonomy_term.field_post_banner_height
+    - field.storage.taxonomy_term.field_post_banner_width
     - field.storage.taxonomy_term.field_post_login_banner_widget
     - field.storage.taxonomy_term.field_post_login_link
     - field.storage.taxonomy_term.field_post_login_link_target
+    - field.storage.taxonomy_term.field_pre_banner_height
+    - field.storage.taxonomy_term.field_pre_banner_width
     - field.storage.taxonomy_term.field_pre_login_banner_widget
     - field.storage.taxonomy_term.field_pre_login_link
     - field.storage.taxonomy_term.field_pre_login_link_target
@@ -1591,6 +1595,258 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
+        field_post_banner_height:
+          id: field_post_banner_height
+          table: taxonomy_term__field_post_banner_height
+          field: field_post_banner_height
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: false
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
+        field_pre_banner_height:
+          id: field_pre_banner_height
+          table: taxonomy_term__field_pre_banner_height
+          field: field_pre_banner_height
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: false
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
+        field_pre_banner_width:
+          id: field_pre_banner_width
+          table: taxonomy_term__field_pre_banner_width
+          field: field_pre_banner_width
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: false
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
+        field_post_banner_width:
+          id: field_post_banner_width
+          table: taxonomy_term__field_post_banner_width
+          field: field_post_banner_width
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: false
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
       defaults:
         fields: false
         sorts: false
@@ -1631,9 +1887,13 @@ display:
         - 'config:field.storage.taxonomy_term.field_games_alias'
         - 'config:field.storage.taxonomy_term.field_games_category_logo'
         - 'config:field.storage.taxonomy_term.field_isordinarycategory'
+        - 'config:field.storage.taxonomy_term.field_post_banner_height'
+        - 'config:field.storage.taxonomy_term.field_post_banner_width'
         - 'config:field.storage.taxonomy_term.field_post_login_banner_widget'
         - 'config:field.storage.taxonomy_term.field_post_login_link'
         - 'config:field.storage.taxonomy_term.field_post_login_link_target'
+        - 'config:field.storage.taxonomy_term.field_pre_banner_height'
+        - 'config:field.storage.taxonomy_term.field_pre_banner_width'
         - 'config:field.storage.taxonomy_term.field_pre_login_banner_widget'
         - 'config:field.storage.taxonomy_term.field_pre_login_link'
         - 'config:field.storage.taxonomy_term.field_pre_login_link_target'
