--- a/web/sites/zipang-casino/config/sync/core.entity_view_display.zipang_desktop_games_entity.zipang_desktop_games_entity.default.yml
+++ b/web/sites/zipang-casino/config/sync/core.entity_view_display.zipang_desktop_games_entity.zipang_desktop_games_entity.default.yml
@@ -9,6 +9,7 @@ dependencies:
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_game_category
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_game_code
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_game_code_icore
+    - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_game_description
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_game_filter
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_game_filter_games
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_game_provider
@@ -18,6 +19,7 @@ dependencies:
   module:
     - image
     - options
+    - text
     - user
     - zipang_desktop_games
 _core:
@@ -77,6 +79,13 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+    region: content
+  field_game_description:
+    weight: 13
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: text_default
     region: content
   field_game_filter:
     weight: 9
