--- a/web/sites/zipang-casino/config/sync/field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_game_description.yml
+++ b/web/sites/zipang-casino/config/sync/field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_game_description.yml
@@ -13,7 +13,7 @@ entity_type: zipang_desktop_games_entity
 bundle: zipang_desktop_games_entity
 label: 'Game Description'
 description: ''
-required: true
+required: false
 translatable: true
 default_value: {  }
 default_value_callback: ''
