--- a/web/sites/games/config/sync/core.entity_view_display.taxonomy_term.game_category_2_0.default.yml
+++ b/web/sites/games/config/sync/core.entity_view_display.taxonomy_term.game_category_2_0.default.yml
@@ -8,8 +8,12 @@ dependencies:
     - field.field.taxonomy_term.game_category_2_0.field_hide_name
     - field.field.taxonomy_term.game_category_2_0.field_link_target_post_login
     - field.field.taxonomy_term.game_category_2_0.field_link_target_pre_login
+    - field.field.taxonomy_term.game_category_2_0.field_post_login_banner_height
     - field.field.taxonomy_term.game_category_2_0.field_post_login_banner_widget
+    - field.field.taxonomy_term.game_category_2_0.field_post_login_banner_width
+    - field.field.taxonomy_term.game_category_2_0.field_pre_login_banner_height
     - field.field.taxonomy_term.game_category_2_0.field_pre_login_banner_widget
+    - field.field.taxonomy_term.game_category_2_0.field_pre_login_banner_width
     - field.field.taxonomy_term.game_category_2_0.field_v2_game_category_alias
     - field.field.taxonomy_term.game_category_2_0.field_v2_game_category_disable
     - field.field.taxonomy_term.game_category_2_0.field_v2_game_category_hicon
@@ -74,6 +78,14 @@ content:
     third_party_settings: {  }
     type: list_default
     region: content
+  field_post_login_banner_height:
+    weight: 22
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
   field_post_login_banner_widget:
     weight: 14
     label: above
@@ -82,8 +94,32 @@ content:
     third_party_settings: {  }
     type: string
     region: content
+  field_post_login_banner_width:
+    weight: 24
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_pre_login_banner_height:
+    weight: 23
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
   field_pre_login_banner_widget:
     weight: 15
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_pre_login_banner_width:
+    weight: 25
     label: above
     settings:
       link_to_entity: false
