--- a/web/sites/jamboree-casino/config/sync/core.entity_view_display.jamboree_desktop_games_entity.jamboree_desktop_games_entity.default.yml
+++ b/web/sites/jamboree-casino/config/sync/core.entity_view_display.jamboree_desktop_games_entity.jamboree_desktop_games_entity.default.yml
@@ -3,6 +3,7 @@ langcode: ja
 status: true
 dependencies:
   config:
+    - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_all_games_category
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_client_type
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_enable_free_play
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_enable_game
@@ -25,6 +26,14 @@ targetEntityType: jamboree_desktop_games_entity
 bundle: jamboree_desktop_games_entity
 mode: default
 content:
+  field_all_games_category:
+    weight: 13
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_client_type:
     weight: 8
     label: above
