--- a/web/sites/jamboree-casino/config/sync/language.content_settings.taxonomy_term.all_games_category.yml
+++ b/web/sites/jamboree-casino/config/sync/language.content_settings.taxonomy_term.all_games_category.yml
@@ -4,6 +4,13 @@ status: true
 dependencies:
   config:
     - taxonomy.vocabulary.all_games_category
+  module:
+    - content_translation
+third_party_settings:
+  content_translation:
+    enabled: false
+    bundle_settings:
+      untranslatable_fields_hide: '0'
 id: taxonomy_term.all_games_category
 target_entity_type_id: taxonomy_term
 target_bundle: all_games_category
