--- a/web/sites/jamboree-casino/config/sync/views.view.all_games_categories.yml
+++ b/web/sites/jamboree-casino/config/sync/views.view.all_games_categories.yml
@@ -6,10 +6,11 @@ dependencies:
     - field.storage.taxonomy_term.field_icon
     - taxonomy.vocabulary.all_games_category
   module:
-    - image
     - rest
+    - rest_views
     - serialization
     - taxonomy
+    - webcomposer_rest_extra
 id: all_games_categories
 label: 'All Games Categories'
 module: views
@@ -77,6 +78,70 @@ display:
           hide_empty: false
           default_field_elements: true
       fields:
+        tid:
+          id: tid
+          table: taxonomy_term_field_data
+          field: tid
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: number_unformatted
+          settings: {  }
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          entity_type: taxonomy_term
+          entity_field: tid
+          plugin_id: field
         name:
           id: name
           table: taxonomy_term_field_data
@@ -192,9 +257,11 @@ display:
           empty_zero: false
           hide_alter_empty: true
           click_sort_column: target_id
-          type: image_url
+          type: image_export
           settings:
             image_style: ''
+            export_alt: 0
+            export_title: false
           group_column: ''
           group_columns: {  }
           group_rows: true
@@ -245,7 +312,7 @@ display:
         options:
           offset: 0
       style:
-        type: serializer
+        type: node_list_serializer
         options:
           uses_fields: true
           formats:
@@ -259,6 +326,9 @@ display:
               raw_output: false
             field_icon:
               alias: icon
+              raw_output: false
+            tid:
+              alias: id
               raw_output: false
     cache_metadata:
       max-age: -1
