--- a/web/sites/jamboree-casino/config/sync/core.entity_form_display.jamboree_desktop_games_entity.jamboree_desktop_games_entity.default.yml
+++ b/web/sites/jamboree-casino/config/sync/core.entity_form_display.jamboree_desktop_games_entity.jamboree_desktop_games_entity.default.yml
@@ -4,6 +4,8 @@ status: true
 dependencies:
   config:
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_all_games_category
+    - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_arcade_game_category
+    - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_arcade_game_filter
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_client_type
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_enable_free_play
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_enable_game
@@ -16,6 +18,7 @@ dependencies:
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_game_tag
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_game_thumbnail
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_game_title
+    - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_game_type
     - image.style.thumbnail
   module:
     - conditional_fields
@@ -30,7 +33,7 @@ third_party_settings:
         - field_game_category
         - field_game_filter
       parent_name: ''
-      weight: 11
+      weight: 12
       format_type: fieldset
       format_settings:
         label: 'Casino (for casino page)'
@@ -43,7 +46,7 @@ third_party_settings:
       children:
         - field_game_filter_games
       parent_name: ''
-      weight: 12
+      weight: 13
       format_type: fieldset
       format_settings:
         label: 'Games (for games page)'
@@ -52,6 +55,20 @@ third_party_settings:
         classes: ''
         required_fields: false
       label: 'Games (for games page)'
+    group_arcade_game_categoryy_filt:
+      children:
+        - field_arcade_game_category
+        - field_arcade_game_filter
+      parent_name: ''
+      weight: 15
+      format_type: fieldset
+      format_settings:
+        label: 'Arcade (for arcade page)'
+        description: ''
+        id: ''
+        classes: ''
+        required_fields: false
+      label: 'Arcade (for arcade page)'
 id: jamboree_desktop_games_entity.jamboree_desktop_games_entity.default
 targetEntityType: jamboree_desktop_games_entity
 bundle: jamboree_desktop_games_entity
@@ -59,6 +76,18 @@ mode: default
 content:
   field_all_games_category:
     weight: 14
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
+  field_arcade_game_category:
+    weight: 16
+    settings: {  }
+    third_party_settings: {  }
+    type: erviews_options_buttons
+    region: content
+  field_arcade_game_filter:
+    weight: 17
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -172,7 +201,7 @@ content:
     type: options_select
     region: content
   field_game_provider:
-    weight: 10
+    weight: 11
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -198,6 +227,12 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
+    region: content
+  field_game_type:
+    weight: 10
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
     region: content
   langcode:
     type: language_select
