--- a/web/sites/jamboree-casino/config/sync/core.entity_view_display.jamboree_desktop_games_entity.jamboree_desktop_games_entity.default.yml
+++ b/web/sites/jamboree-casino/config/sync/core.entity_view_display.jamboree_desktop_games_entity.jamboree_desktop_games_entity.default.yml
@@ -4,6 +4,8 @@ status: true
 dependencies:
   config:
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_all_games_category
+    - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_arcade_game_category
+    - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_arcade_game_filter
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_client_type
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_enable_free_play
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_enable_game
@@ -16,6 +18,7 @@ dependencies:
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_game_tag
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_game_thumbnail
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_game_title
+    - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_game_type
   module:
     - image
     - jamboree_desktop_games
@@ -28,6 +31,22 @@ mode: default
 content:
   field_all_games_category:
     weight: 13
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_arcade_game_category:
+    weight: 15
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_arcade_game_filter:
+    weight: 16
     label: above
     settings:
       link: true
@@ -133,6 +152,14 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+    region: content
+  field_game_type:
+    weight: 14
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   name:
     label: above
